feat: new SEO optimizations from copilot

--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-   "baseURL": "http://example.org/",
+   "baseURL": "https://blogs.ekalaivan.net/",
    "languageCode": "en-us",
-   "title": "My New Hugo Site"
+   "title": "Ekalaivan Chidambaram Blogs - DotNet Development Insights"
 }
